# markitdown-cf

./: .gitignore  .prettierignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
app/: main.py
src/: index.ts
