[project]
name = "markitdown-cf"
version = "0.1.0"
description = "Cloudflare container Worker that converts PDFs to Markdown via MarkItDown"
authors = [
    { name = "Paul Dlug", email = "paul.dlug@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "markitdown[all]>=0.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
    "poethepoet>=0.37.0",
    "pytest>=8.3.4",
]

[tool.poe.tasks]
mypy = "mypy app"
lint = "ruff check ."
format = "ruff format ."

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
